# batchos

./: .gitignore  Makefile  README.md
os/: Cargo.toml
os/src/: batch.rs  link_app.S  main.rs  trap.rs
os/src/batch/: app_manager.rs  kernel_stack.rs  user_stack.rs
os/src/syscall/: fs.rs  process.rs
os/src/trap/: context.rs  trap.S
